@@ -457,6 +457,7 @@ enum AVCodecID {
     AV_CODEC_ID_AGM,
     AV_CODEC_ID_LSCR,
     AV_CODEC_ID_VP4,
+    AV_CODEC_ID_IMM5,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
