@@ -7,6 +7,7 @@ version <next>:
 - Intel QSV-accelerated VP9 decoding
 - support for TrueHD in mp4
 - Supoort AMD AMF encoder on Linux (via Vulkan)
+- IMM5 video decoder
 
 
 version 4.2:
